--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,5 @@
+android.useAndroidX=true
+android.enableJetifier=true
 # Project-wide Gradle settings.
 
 # IDE (e.g. Android Studio) users:
@@ -42,3 +44,8 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+MYAPP_UPLOAD_STORE_FILE=my_release_key.keystore
+MYAPP_UPLOAD_KEY_ALIAS= my_key_alias
+MYAPP_UPLOAD_STORE_PASSWORD=10022001dD@
+MYAPP_UPLOAD_KEY_PASSWORD=10022001dD@
