--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "and": "^0.0.3",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
+    "jwt-decode": "^3.1.2",
     "react": "18.2.0",
     "react-native": "0.71.4",
+    "react-native-dotenv": "^3.4.8",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-vector-icons": "^9.2.0",
