--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-screens": "^3.20.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "^11.26.1",
+    "react-native-wheely": "^0.6.0",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
