--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-animated-nav-tab-bar": "^3.1.8",
+    "react-native-calendar-picker": "^7.1.4",
     "react-native-dotenv": "^3.4.8",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
