--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "react-native": "0.71.4",
     "react-native-animated-nav-tab-bar": "^3.1.8",
     "react-native-calendar-picker": "^7.1.4",
+    "react-native-collapsible": "^1.6.1",
     "react-native-dotenv": "^3.4.8",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-vector-icons": "^9.2.0",
