--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-calendar-picker": "^7.1.4",
     "react-native-collapsible": "^1.6.1",
     "react-native-dotenv": "^3.4.8",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
