--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-snap-carousel": "https://github.com/taurusfbi10/react-native-snap-carousel",
     "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "^11.26.1",
     "react-native-wheely": "^0.6.0",
+    "react-style-proptype": "^3.2.2",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
