--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "react-native-collapsible": "^1.6.1",
     "react-native-dotenv": "^3.4.8",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-pager-view": "^6.2.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-snap-carousel": "https://github.com/taurusfbi10/react-native-snap-carousel",
+    "react-native-tab-view": "^3.5.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "^11.26.1",
     "react-native-wheely": "^0.6.0",
