--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-dotenv": "^3.4.8",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "^1.5.0",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-pager-view": "^6.2.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "^4.5.0",
