--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-select-dropdown": "https://github.com/thanhduong1002/react-native-select-dropdown.git",
     "react-native-snap-carousel": "https://github.com/taurusfbi10/react-native-snap-carousel",
     "react-native-tab-view": "^3.5.1",
     "react-native-vector-icons": "^9.2.0",
