--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@miblanchard/react-native-slider": "^2.3.1",
     "@react-native-async-storage/async-storage": "^1.17.12",
+    "@react-navigation/material-top-tabs": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@reduxjs/toolkit": "^1.9.5",
     "and": "^0.0.3",
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
@@ -38,7 +40,9 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-webview": "^11.26.1",
     "react-native-wheely": "^0.6.0",
+    "react-redux": "^8.0.5",
     "react-style-proptype": "^3.2.2",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
