--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -178,6 +178,7 @@ dependencies {
     implementation project(':react-native-vector-icons')
     implementation('com.google.android.gms:play-services-auth:20.0.0')
     implementation("androidx.browser:browser:1.2.0")
+    implementation project(':lottie-react-native')
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
