--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "axios": "^1.3.4",
     "dayjs": "^1.11.7",
     "jwt-decode": "^3.1.2",
+    "lottie-ios": "^3.4.0",
+    "lottie-react-native": "^5.1.5",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.4",
