--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "^1.5.0",
     "react-native-maps-directions": "^1.9.0",
+    "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.2.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "^4.5.0",
