--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-collapsible": "^1.6.1",
     "react-native-dotenv": "^3.4.8",
     "react-native-geolocation-service": "^5.3.1",
+    "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "^1.5.0",
     "react-native-maps-directions": "^1.9.0",
